# mtbo-scraper

./: .bandit  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  README.md  SAFETY.md  events.json  mtbo_events.json  pyproject.toml  requirements.txt  run_tests.sh  schema.json  scrape_and_push.sh  scrape_and_push_current.sh  scrape_now.sh  verify_env.py
.agent/rules/: use-agents-md.md
.agent/skills/create-manual-event/: SKILL.md
.agent/skills/python-reviewer/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: bandit.yml  dependabot-auto-approve.yml  scrape-current.yml  scrape-full.yml  tests.yml
data/events/: mtbo_events.json
data/events/2010/: IOF_3825_startlist_1.yaml  IOF_3826_startlist_1.yaml  IOF_3829_startlist_1.yaml  IOF_3861_startlist_1.yaml  IOF_3865_startlist_1.yaml  IOF_3883_startlist_1.yaml  IOF_3885_startlist_1.yaml  IOF_3887_startlist_1.yaml  IOF_3920_startlist_1.yaml  IOF_3921_startlist_1.yaml  events.json
data/events/2011/: IOF_3999_startlist_1.yaml  IOF_4002_startlist_1.yaml  IOF_4003_startlist_1.yaml  IOF_4043_startlist_1.yaml  IOF_4044_startlist_1.yaml  IOF_4075_startlist_1.yaml  IOF_4076_startlist_1.yaml  IOF_4078_startlist_1.yaml  IOF_4095_startlist_1.yaml  IOF_4096_startlist_1.yaml  IOF_4099_startlist_1.yaml  events.json
data/events/2012/: IOF_4214_startlist_1.yaml  IOF_4216_startlist_1.yaml  IOF_4236_startlist_1.yaml  IOF_4239_startlist_1.yaml  (+17 more)
docs/: design.md  integration_guide.md  operation.md
examples/: quick_start.py
manual_events/DK-MAN-MTBOCAMP26/: event.yaml
manual_events/MAN_DNK_MTBOCAMP26/: event.yaml
manual_events/MAN_PRT_TCAMP26/: event.yaml
manual_events/PRT-MAN-TCAMP26/: event.yaml
scripts/: event_report.py  generate_swedish_stats.py
src/: __init__.py  __main__.py  diff.py  event_filter.py  exceptions.py  html_cache.py  main.py  models.py  parsers.py  scraper.py  storage.py
src/sources/: README.md  __init__.py  base.py  base_source.py  eventor.py  eventor_parser.py  eventor_source.py  manual.py  manual_source.py
src/utils/: README.md  __init__.py  country.py  crypto.py  date_and_time.py  diff.py  fingerprint.py
tests/: conftest.py  fetch_all_test_data.py  test_date_logic.py  test_date_shift_fix.py  test_diff.py  test_document_date.py  test_download_logic.py  test_event_filter.py  test_eventor_parser_date.py  test_eventor_parser_date_logic_complete.py  test_eventor_parser_date_range.py  test_eventor_parser_utils.py  test_fingerprint_integration.py  test_fingerprint_logic.py  test_html_cache.py  test_iof_startlist.py  test_local_listing.py  test_local_startlist_timestamp.py  test_manual_events.py  test_models.py  test_new_events.py  test_organiser_split.py  test_parser.py  test_parser_data_quality.py  test_parser_duplication.py  test_parser_urls.py  test_race_urls.py  test_schema_validation.py  test_scraper_robustness.py  test_series_manual.py  test_source_date_logic.py  test_storage.py  test_storage_timestamps.py
tests/data/: IOF_7490_main.html  IOF_7490_race1_main.html  IOF_7490_race1_result_list.html  IOF_7490_race1_start_list.html  IOF_7490_race2_main.html  IOF_7490_race2_result_list.html  IOF_7490_race2_start_list.html  IOF_7490_race3_main.html  IOF_7490_race3_result_list.html  IOF_7490_race3_start_list.html  IOF_7490_race4_main.html  IOF_7490_race4_result_list.html  IOF_7490_race4_start_list.html  IOF_7490_race5_main.html  IOF_7490_race5_result_list.html  IOF_7490_race5_start_list.html  IOF_8277_multi.html  IOF_8558_single.html  NOR_21169_single.html  SWE_46200_main.html  SWE_46200_race1_result_list.html  SWE_46200_race1_start_list.html  SWE_46200_race2_result_list.html  SWE_46200_race2_start_list.html  SWE_46200_race3_result_list.html  SWE_46200_race3_start_list.html  SWE_46200_race4_result_list.html  SWE_46200_race4_start_list.html  SWE_46200_race5_result_list.html  SWE_46200_race5_start_list.html  SWE_50597_multi.html  SWE_51338_entries.html  SWE_51338_main.html  SWE_51338_result_list.html  SWE_51338_start_list.html  SWE_54361_single.html  SWE_56468_main.html  SWE_57105_main.html  eventor_test_urls.json  eventor_test_urls.txt
(+315 files in other folders)
