[project]
name = "mtbo-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.3.1",
    "cloudscraper @ git+https://github.com/VeNoMouS/cloudscraper.git@3.0.0",
    "lxml>=6.0.2",
    "pyvirtualdisplay>=3.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
